# temoto_action_designer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
package_generator/scripts/: generate_package.py  struct_gen.py
package_generator/templates/: cmakelists.jinja  cmakelists_ros2.jinja  packagexml.jinja  param_init.jinja  param_structs.jinja  temoto_action.jinja  temoto_action_impl.jinja
src/: action_assistant_main.cpp
src/node_editor_examples/: TextData.hpp  TextDisplayDataModel.cpp  TextDisplayDataModel.hpp  TextSourceDataModel.cpp.bak  TextSourceDataModel.hpp.bak  condition_edit_widget.cpp  condition_edit_widget.hpp  counter.hpp  main.cpp  umrf_node_model.cpp  umrf_node_model.hpp
